Fixed toast sometimes not visible, slight styling changes, centered contact modal

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -109,6 +109,11 @@ textarea {
     background-color: #ba0404;
 }
 
+.toast-body {
+    background-color: #8f8c85;
+    border: none;
+}
+
 /* Dark Mode Toggle */
 .switch {
     position: relative;
